# Automated-Penetration-Testing-System

./: .gitignore  README.md  main.py  pyproject.toml  使用说明书.md
autopentest/: api.py  cli.py  config.py  http.py  models.py  orchestrator.py  reporting.py  scope.py  storage.py  web.py
autopentest/plugins/: __init__.py  base.py  cookie_flags.py  security_headers.py  tls_metadata.py
autopentest/web_static/: app.css  app.js  index.html
tests/: test_cli.py  test_plugins.py  test_scope.py  test_web_api.py
