[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "authorized-autopentest"
version = "0.1.0"
description = "Authorized internal security assessment CLI with passive checks and scope enforcement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autopentest = "autopentest.cli:main"

[tool.setuptools.packages.find]
include = ["autopentest*"]

[tool.setuptools.package-data]
autopentest = ["web_static/*", "web_static/assets/*"]
